examples/passing/route-match-precedence-resolved/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: crm-api-gateway
  namespace: crm-api
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: crm-api.example.com
